--- a/style.scss
+++ b/style.scss
@@ -6,15 +6,15 @@
 }
 
 .container {
-  // background-color: #111;
-  // overflow: hidden;
+  background-color: #111;
+  overflow: hidden;
 }
 
 .welcome {
   height: 100vh;
   display: flex;
   align-items: center;
-  // overflow: hidden;
+  overflow: hidden;
   .welcomeTextContainer {
     flex: 3;
   }
@@ -54,8 +54,120 @@
   }
 }
 .dark {
-  background: url("./img/bg1.png");
+  background: url('../img/bg1.png');
 }
 .purple {
-  background: rebeccapurple url("./img/bg2.png");
+  background: rebeccapurple url('../img/bg2.png');
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  gap: 30vh;
+  padding: 0px 100px;
+  .projectsTitle {
+    font-size: 8vw;
+    color: #333;
+  }
+  .project {
+    display: flex;
+    align-items: center;
+    gap: 7vw;
+    height: 100vh;
+    // overflow: hidden;
+    .phone {
+      flex: 1;
+      width: 300px;
+      height: 600px;
+      position: relative;
+      .phoneScreen {
+        width: 264px;
+        height: 567px;
+        position: absolute;
+        top: 17px;
+        left: 18px;
+        border-radius: 28px;
+        overflow: scroll;
+      }
+      .phoneScreen::-webkit-scrollbar {
+        display: none;
+      }
+    }
+    .projectDetail {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 5vh;
+      align-items: center;
+      .projectTitle {
+        font-size: 4vw;
+        color: #555;
+      }
+      .projectDesc {
+        font-size: 18px;
+        color: #555;
+        text-align: justify;
+        line-height: 35px;
+      }
+    }
+    .projectButton {
+      padding: 10px 20px;
+      background-color: transparent;
+      border: 2px solid #555;
+      color: #555;
+      cursor: pointer;
+      position: relative;
+      overflow: hidden;
+      text-decoration: none;
+    }
+    .projectButton::after {
+      content: 'View Demo';
+      width: 110%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: -110%;
+      transition: 0.6s all;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #555;
+      color: #222;
+    }
+    .projectButton:hover.projectButton::after {
+      transform: translateX(95%);
+    }
+  }
+  .project:nth-child(2n) {
+    flex-direction: row-reverse;
+  }
+}
+
+.laptop {
+  width: 600px;
+  height: 379px;
+  flex: 1;
+  position: relative;
+  .laptopScreen {
+    width: 451px;
+    height: 283px;
+    position: absolute;
+    top: 18px;
+    left: 68px;
+    overflow: scroll;
+    .laptopApp {
+      width: 100%;
+    }
+  }
+  .laptopScreen::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.githubContainer {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  // justify-content: space-around;
 }
