--- a/style.scss
+++ b/style.scss
@@ -88,6 +88,9 @@
         left: 18px;
         border-radius: 28px;
         overflow: scroll;
+        .phoneApp {
+          width: 100%;
+        }
       }
       .phoneScreen::-webkit-scrollbar {
         display: none;
@@ -165,9 +168,50 @@
 }
 
 .githubContainer {
-  height: 100vh;
+  height: 80vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  // justify-content: space-around;
+  justify-content: space-around;
+  .githubTitle {
+    margin-top: 2vw;
+    font-size: 5vw;
+    color: #333;
+  }
+  .githubChart {
+    width: 820px;
+    text-align: center;
+    .dates {
+      padding: 10px;
+      color: #555;
+      font-size: 12px;
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+  .boxContainer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    .box {
+      width: 15px;
+      height: 15px;
+      background-color: #171c25;
+      border-radius: 2px;
+      cursor: pointer;
+      transition: 3s all ease;
+    }
+    .active:nth-child(4n) {
+      background-color: #195b2c;
+    }
+  }
+  .githubChart:hover .active:nth-child(2n + 1) {
+    background-color: #195b2c;
+  }
+  .githubChart:hover .active:nth-child(2n) {
+    background-color: #063f24;
+  }
+  .githubSm {
+    display: none;
+  }
 }
