--- a/scss/main.scss
+++ b/scss/main.scss
@@ -54,7 +54,7 @@
   }
   .welcomeText {
     display: block;
-    color: #333;
+    color: rgb(136, 132, 132);
     font-size: 50vw;
     cursor: default;
   }
@@ -70,7 +70,9 @@
   background-color: rebeccapurple;
   .name {
     font-size: 17vw;
-    color: #333;
+    // color: rgb(136, 132, 132);
+    color: rgb(211, 199, 199);
+
     cursor: default;
     text-align: center;
     line-height: 100vh;
@@ -100,7 +102,7 @@
   height: 100vh;
   .jobTitle {
     font-size: 10vw;
-    color: #333;
+    color: rgb(136, 132, 132);
     line-height: 100vh;
     cursor: default;
   }
@@ -110,6 +112,80 @@
 }
 .purple {
   background: rebeccapurple url('../img/bg2.png');
+  .jobTitle {
+    color: rgb(211, 199, 199);
+  }
+}
+
+.about-wrapper {
+  background-color: #111;
+  height: 100vh;
+  background-color: rgb(22, 22, 22);
+  color: rgb(165, 156, 156);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  padding: 6rem 10px 10px 10px;
+  .about {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+  }
+  .about-img {
+    position: relative;
+    width: 14vw;
+    height: 14vw;
+
+    img {
+      width: 100%;
+      height: 100%;
+      filter: grayscale(100%);
+
+    }
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
+      top: -1rem;
+      left: -1rem;
+      border: 0.3rem solid rgb(165, 156, 156);
+    }
+  }
+  h3 {
+    padding-top: 4rem;
+    font-size: 1.5rem;
+  }
+  .about-text {
+    width: 70%;
+    padding: 3rem 0 7rem 0;
+    line-height: 160%;
+    font-size: 1.2rem;
+    span {
+      font-size: 1.25rem;
+      font-weight: bolder;
+      color: rgb(211, 199, 199);
+    }
+  }
+
+  .skills {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-left: 3rem;
+    font-size: 1.2rem;
+    ul {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+    p {
+      padding: 3rem 0 7rem 0;
+    }
+  }
 }
 
 .projects {
@@ -117,16 +193,17 @@
   flex-direction: column;
   gap: 30vh;
   padding: 0px 100px;
+  color: rgb(136, 132, 132);
+
   .projectsTitle {
     font-size: 8vw;
-    color: #333;
   }
   .project {
     display: flex;
     align-items: center;
     gap: 7vw;
     height: 100vh;
-    // overflow: hidden;
+
     .phone {
       flex: 1;
       width: 300px;
@@ -156,13 +233,14 @@
       flex-direction: column;
       gap: 5vh;
       align-items: center;
+      color: rgb(165, 156, 156);
+
       .projectTitle {
         font-size: 4vw;
-        color: #555;
+        // color: #555;
       }
       .projectDesc {
         font-size: 18px;
-        color: #555;
         text-align: justify;
         line-height: 35px;
       }
@@ -170,8 +248,8 @@
     .projectButton {
       padding: 10px 20px;
       background-color: transparent;
-      border: 2px solid #555;
-      color: #555;
+      border: 2px solid rgb(136, 132, 132);
+      color: rgb(136, 132, 132);
       cursor: pointer;
       position: relative;
       overflow: hidden;
@@ -233,14 +311,14 @@
   .githubTitle {
     margin-top: 2vw;
     font-size: 5vw;
-    color: #333;
+    color: rgb(136, 132, 132);
   }
   .githubChart {
     width: 820px;
     text-align: center;
     .dates {
       padding: 10px;
-      color: #555;
+      color: rgb(136, 132, 132);
       font-size: 12px;
       display: flex;
       justify-content: space-between;
@@ -270,6 +348,72 @@
   }
   .githubSm {
     display: none;
+  }
+}
+
+.footer-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  width: 100%;
+  background-color: rebeccapurple;
+  .footer-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    .contact-box {
+      position: relative;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0.5rem 0;
+      &::before {
+        display: block;
+        content: '';
+        position: absolute;
+        top: 50%;
+        left: 0;
+        right: 0;
+        height: 1px;
+        background-color: #111;
+        opacity: 0.75;
+      }
+      span {
+        z-index: 1;
+        padding: 0.5rem 1rem;
+        background-color: rebeccapurple;
+        color: #111;
+      }
+    }
+    p {
+      padding: 0.5rem 1rem;
+      color: rgb(211, 199, 199);
+      span {
+        font-weight: bolder;
+        letter-spacing: 0.3px;
+      }
+
+      a {
+        text-decoration: none;
+        font-size: 2rem;
+        font-weight: bolder;
+        color: rgb(211, 199, 199);
+        padding: 0.5rem 1rem;
+        transition: 0.3s;
+        &:hover {
+          color: rgb(180, 168, 168);
+        }
+      }
+    }
+    .copyright {
+      margin-top: 2rem;
+      .year {
+        font-weight: normal;
+      }
+    }
   }
 }
 
