--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,6 @@
+@import './animations';
+@import './colors';
+
 * {
   padding: 0;
   margin: 0;
@@ -6,9 +9,11 @@
 }
 
 .container {
-  background-color: #111;
+  background-color: $dark;
   overflow: hidden;
 }
+
+//  INTRODUCTION ///////////////////////////////
 
 .welcome {
   position: relative;
@@ -16,81 +21,117 @@
   display: flex;
   align-items: center;
   overflow: hidden;
-
-  .welcomeTextContainer {
+  flex-direction: column;
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
+  &__text-container {
     flex: 3;
     z-index: 10;
   }
-
-  .header-icon-one,
-  .header-icon-two,
-  .header-icon-three {
+  &__text {
+    display: block;
+    color: $textColor;
+    font-size: 50vw;
+    cursor: default;
+    font-size: 70vw;
+    @media (min-width: 360px) {
+      font-size: 50vw;
+    }
+  }
+  &__icon-one,
+  &__icon-two,
+  &__icon-three {
     position: absolute;
     opacity: 0.05;
     z-index: 5;
   }
-  .header-icon-one {
-    width: 9vw;
-    top: 70%;
-    left: 58%;
+  &__icon-one {
+    width: 16vw;
+    top: 14%;
+    left: 6%;
     animation: rotate-right 55s infinite linear;
+    @media (min-width: 768px) {
+      width: 9vw;
+      top: 70%;
+      left: 58%;
+    }
   }
-  .header-icon-two {
-    width: 3vw;
-    top: 20%;
-    left: 66%;
+  &__icon-two {
+    width: 15vw;
+    top: 32%;
+    left: 75%;
     animation: rotate-left 75s infinite linear;
+    @media (min-width: 768px) {
+      width: 3vw;
+      top: 20%;
+      left: 66%;
+    }
+    @media (min-width: 1024px) {
+      left: 52%;
+    }
   }
-  .header-icon-three {
-    width: 5vw;
-    top: 65%;
-    left: 18%;
+  &__icon-three {
+    width: 12vw;
+    top: 82%;
+    left: 9%;
     animation: rotate-right 45s infinite linear;
     z-index: 5;
+    @media (min-width: 768px) {
+      width: 5vw;
+      top: 65%;
+      left: 18%;
+    }
   }
-
-  .welcomeImgContainer {
-    flex: 1;
+  &__img-container {
+    flex: 2;
+    @media (min-width: 1024px) {
+      flex: 1;
+    }
   }
-  .welcomeText {
-    display: block;
-    color: rgb(136, 132, 132);
-    font-size: 50vw;
-    cursor: default;
-  }
-  .welcomeImg {
-    width: 90%;
+  &__img {
+    width: 80%;
+    @media (min-width: 768px) {
+      width: 90%;
+    }
+    @media (min-width: 1024px) {
+      width: 94%;
+    }
   }
 }
 
-.nameContainer {
+.name {
   position: relative;
   height: 100vh;
   padding: 1vw 2vw;
-  background-color: rebeccapurple;
-  .name {
+  background-color: $purple;
+  display: none;
+  @media (min-width: 1024px) {
+    display: block;
+  }
+  &__me {
     font-size: 17vw;
-    // color: rgb(136, 132, 132);
-    color: rgb(211, 199, 199);
-
+    color: $textLighter;
     cursor: default;
     text-align: center;
-    line-height: 100vh;
+    line-height: 50vh;
+    @media (min-width: 768px) {
+      line-height: 100vh;
+    }
   }
-  .name-icon-one,
-  .name-icon-two {
+  &__icon-one,
+  &__icon-two {
     position: absolute;
     opacity: 0.05;
     z-index: 5;
   }
-
-  .name-icon-one {
+  &__icon-one {
     width: 8vw;
     top: 14%;
     left: 8%;
     animation: rotate-right 65s infinite linear;
   }
-  .name-icon-two {
+  &__icon-two {
     width: 5vw;
     top: 84%;
     left: 88%;
@@ -98,11 +139,15 @@
   }
 }
 
-.jobTitleContainer {
+.job-title {
   height: 100vh;
-  .jobTitle {
+  display: none;
+  @media (min-width: 1024px) {
+    display: block;
+  }
+  &__text {
     font-size: 10vw;
-    color: rgb(136, 132, 132);
+    color: $textColor;
     line-height: 100vh;
     cursor: default;
   }
@@ -111,38 +156,68 @@
   background: url('../img/bg1.png');
 }
 .purple {
-  background: rebeccapurple url('../img/bg2.png');
-  .jobTitle {
-    color: rgb(211, 199, 199);
+  background: $purple url('../img/bg2.png');
+  .job-title__text {
+    color: $textLighter;
   }
 }
 
-.about-wrapper {
-  background-color: #111;
+.name-mobile {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
-  background-color: rgb(22, 22, 22);
-  color: rgb(165, 156, 156);
+  background: $purple url('../img/bg2.png');
+  color: $textLighter;
+  h2 {
+    margin: 1rem 0;
+    font-size: 10vw;
+  }
+  @media (min-width: 1024px) {
+    display: none;
+  }
+}
+
+// ABOUT AND SKILLS ///////////////////////////////////
+
+.about {
+  color: $chalk;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   grid-template-rows: 1fr;
-  padding: 6rem 10px 10px 10px;
-  .about {
+  height: fit-content;
+  background-color: $brown;
+  padding: 4rem 2px 10px 2px;
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    padding: 6rem 10px 10px 10px;
+    height: 100vh;
+  }
+  &__box {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
     height: 100%;
+    h3 {
+      padding-top: 4rem;
+      font-size: 1.5rem;
+    }
   }
-  .about-img {
+  &__img {
     position: relative;
-    width: 14vw;
-    height: 14vw;
-
+    width: 64vw;
+    height: 64vw;
+    @media (min-width: 1024px) {
+      width: 14vw;
+      height: 14vw;
+    }
     img {
       width: 100%;
       height: 100%;
       filter: grayscale(100%);
-
     }
     &::before {
       content: '';
@@ -152,129 +227,189 @@
       z-index: 0;
       top: -1rem;
       left: -1rem;
-      border: 0.3rem solid rgb(165, 156, 156);
+      border: 0.3rem solid $chalk;
     }
   }
-  h3 {
-    padding-top: 4rem;
-    font-size: 1.5rem;
-  }
-  .about-text {
-    width: 70%;
-    padding: 3rem 0 7rem 0;
-    line-height: 160%;
-    font-size: 1.2rem;
+  &__text {
+    width: 90%;
+    font-size: 1rem;
+    line-height: 180%;
+    padding: 3rem 0 3rem 0;
+    @media (min-width: 1024px) {
+      width: 70%;
+      font-size: 1.2rem;
+      line-height: 160%;
+      padding: 3rem 0 7rem 0;
+    }
     span {
       font-size: 1.25rem;
       font-weight: bolder;
-      color: rgb(211, 199, 199);
+      color: $textLighter;
     }
   }
 
   .skills {
     height: 100%;
     display: flex;
+    margin: 0 1rem;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    justify-content: flex-end;
-    margin-left: 3rem;
     font-size: 1.2rem;
-    ul {
+    @media (min-width: 1024px) {
+      margin-left: 3rem;
+      justify-content: flex-end;
+    }
+    &__list {
       display: grid;
       grid-template-columns: 1fr 1fr;
+      list-style: none;
+      font-size: 1rem;
+      @media (min-width: 1024px) {
+        font-size: 1.2rem;
+      }
+
+      li {
+        padding-top: 0.5rem;
+      }
+      .fa {
+        margin-right: 1rem;
+        font-size: 1rem;
+      }
     }
     p {
-      padding: 3rem 0 7rem 0;
+      padding: 3rem 0 3rem 0;
+      font-size: 1.1rem;
+      @media (min-width: 1024px) {
+        padding: 3rem 0 7rem 0;
+      }
+    }
+    &__notice {
+      font-size: 0.85rem;
     }
   }
 }
-
+// PROJECTS //////////////////////////////////////////
 .projects {
   display: flex;
   flex-direction: column;
-  gap: 30vh;
-  padding: 0px 100px;
-  color: rgb(136, 132, 132);
-
-  .projectsTitle {
-    font-size: 8vw;
+  gap: 10vh;
+  padding: 0px 10px;
+  color: $textColor;
+  width: 92vw;
+  margin: 0 auto;
+  @media (min-width: 1024px) {
+    gap: 30vh;
+    padding: 0px 100px;
   }
+  &__title {
+    text-align: center;
+    font-size: 8vw;
+    margin-top: 8rem;
+    @media (min-width: 1024px) {
+      margin-top: 0;
+    }
+  }
+
   .project {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 7vw;
-    height: 100vh;
+    gap: 1vw;
+    height: fit-content;
+    @media (min-width: 1024px) {
+      flex-direction: row;
+      margin-bottom: 8vw;
+      height: 100vh;
+      gap: 7vw;
+    }
+    &:nth-child(2n) {
+      flex-direction: column;
+      @media (min-width: 1024px) {
+        flex-direction: row-reverse;
+      }
+    }
 
-    .phone {
+    &__phone {
       flex: 1;
       width: 300px;
       height: 600px;
       position: relative;
       cursor: pointer;
-
-      .phoneScreen {
-        width: 264px;
-        height: 567px;
-        position: absolute;
-        top: 17px;
-        left: 18px;
-        border-radius: 28px;
-        overflow: scroll;
-        .phoneApp {
-          width: 100%;
-        }
-      }
-      .phoneScreen::-webkit-scrollbar {
-        display: none;
+      z-index: 10;
+      transform: scale(0.8);
+      @media (min-width: 1024px) {
+        transform: scale(1);
       }
     }
-    .projectDetail {
+    &__phone-screen {
+      width: 264px;
+      height: 567px;
+      position: absolute;
+      top: 17px;
+      left: 18px;
+      border-radius: 28px;
+      overflow: scroll;
+    }
+    &__phone-app {
+      width: 100%;
+    }
+    &__phone-screen::-webkit-scrollbar {
+      display: none;
+    }
+    &__detail {
       flex: 1;
       display: flex;
       flex-direction: column;
       gap: 5vh;
       align-items: center;
-      color: rgb(165, 156, 156);
+      color: $chalk;
+    }
 
-      .projectTitle {
+    &__title {
+      font-size: 8vw;
+      @media (min-width: 1024px) {
         font-size: 4vw;
-        // color: #555;
-      }
-      .projectDesc {
-        font-size: 18px;
-        text-align: justify;
-        line-height: 35px;
       }
     }
-    .projectButton {
+    &__desc {
+      font-size: 18px;
+      text-align: justify;
+      line-height: 160%;
+      @media (min-width: 1024px) {
+        line-height: 80%;
+      }
+    }
+    &__button {
+      position: relative;
       padding: 10px 20px;
       background-color: transparent;
-      border: 2px solid rgb(136, 132, 132);
-      color: rgb(136, 132, 132);
+      border: 2px solid $chalk;
+      color: $chalk;
       cursor: pointer;
-      position: relative;
-      overflow: hidden;
       text-decoration: none;
+      border-radius: 8px;
+      overflow: hidden;
+      &:hover::after {
+        left: 130%;
+        transition: all 0.5s;
+      }
+      &::after {
+        content: '';
+        position: absolute;
+        top: -30px;
+        left: -130px;
+        height: 200%;
+        width: 100px;
+        background-image: linear-gradient(
+          -90deg,
+          rgba(255, 255, 255, 0.3),
+          rgba(255, 255, 255, 0)
+        );
+        transform: rotate(20deg);
+      }
     }
-    .projectButton::after {
-      content: 'View Demo';
-      width: 110%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: -110%;
-      transition: 0.6s all;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: #555;
-      color: #222;
-    }
-    .projectButton:hover.projectButton::after {
-      transform: translateX(95%);
-    }
-  }
-  .project:nth-child(2n) {
-    flex-direction: row-reverse;
   }
 }
 
@@ -284,194 +419,178 @@
   flex: 1;
   position: relative;
   cursor: pointer;
-
-  .laptopScreen {
+  transform: scale(0.55);
+  @media (min-width: 1024px) {
+    transform: scale(1);
+  }
+  &__screen {
     width: 451px;
     height: 283px;
     position: absolute;
     top: 18px;
     left: 68px;
     overflow: scroll;
-
-    .laptopApp {
-      width: 100%;
-    }
   }
-  .laptopScreen::-webkit-scrollbar {
+  &__screen::-webkit-scrollbar {
     display: none;
   }
+  &__app {
+    width: 100%;
+  }
 }
-
-.githubContainer {
-  height: 80vh;
+// GITHUB /////////////////////////////////////////////
+.github {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  .githubTitle {
-    margin-top: 2vw;
-    font-size: 5vw;
-    color: rgb(136, 132, 132);
+  margin-top: 3rem;
+  height: 60vh;
+  @media (min-width: 1024px) {
+    height: 80vh;
+    margin-top: 0;
   }
-  .githubChart {
+  &__title {
+    text-align: center;
+    margin-top: 2rem;
+    font-size: 8vw;
+    color: $textColor;
+    @media (min-width: 1024px) {
+      margin-top: 2vw;
+      font-size: 5vw;
+    }
+  }
+  &__chart {
+    display: none;
     width: 820px;
     text-align: center;
-    .dates {
-      padding: 10px;
-      color: rgb(136, 132, 132);
-      font-size: 12px;
-      display: flex;
-      justify-content: space-between;
+    @media (min-width: 1024px) {
+      display: block;
     }
   }
-  .boxContainer {
+  &__dates {
+    padding: 10px;
+    color: $textColor;
+    font-size: 12px;
     display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-    .box {
-      width: 15px;
-      height: 15px;
-      background-color: #171c25;
-      border-radius: 2px;
-      cursor: pointer;
-      transition: 3s all ease;
-    }
-    .active:nth-child(4n) {
-      background-color: #195b2c;
-    }
-  }
-  .githubChart:hover .active:nth-child(2n + 1) {
-    background-color: #195b2c;
-  }
-  .githubChart:hover .active:nth-child(2n) {
-    background-color: #063f24;
-  }
-  .githubSm {
-    display: none;
+    justify-content: space-between;
   }
 }
 
-.footer-wrapper {
+.github__box-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+  .box {
+    width: 15px;
+    height: 15px;
+    background-color: #171c25;
+    border-radius: 2px;
+    cursor: pointer;
+    transition: 3s all ease;
+  }
+  .active:nth-child(4n) {
+    background-color: $green;
+  }
+}
+.github__chart:hover .active:nth-child(2n + 1) {
+  background-color: $green;
+}
+.github__chart:hover .active:nth-child(2n) {
+  background-color: #063f24;
+}
+
+.githubSm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  color: #555;
+  font-size: 30px;
+  text-align: center;
+  @media (min-width: 1024px) {
+    display: none;
+  }
+  img {
+    cursor: pointer;
+  }
+  h2 {
+    margin-top: 0.8rem;
+    font-size: 2rem;
+  }
+}
+
+// FOOTER ////////////////////////////////////
+
+.footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  padding: 1rem;
   width: 100%;
-  background-color: rebeccapurple;
-  .footer-box {
+  background-color: $purple;
+  &__box {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
-    .contact-box {
-      position: relative;
-      width: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0.5rem 0;
-      &::before {
-        display: block;
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 0;
-        right: 0;
-        height: 1px;
-        background-color: #111;
-        opacity: 0.75;
-      }
-      span {
-        z-index: 1;
-        padding: 0.5rem 1rem;
-        background-color: rebeccapurple;
-        color: #111;
-      }
+    width: 98%;
+    @media (min-width: 1024px) {
+      width: 50%;
     }
-    p {
+  }
+  &__contact-box {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem 0;
+    &::before {
+      display: block;
+      content: '';
+      position: absolute;
+      top: 50%;
+      left: 0;
+      right: 0;
+      height: 1px;
+      background-color: $textLighter;
+      opacity: 0.75;
+    }
+    span {
+      z-index: 1;
       padding: 0.5rem 1rem;
-      color: rgb(211, 199, 199);
-      span {
-        font-weight: bolder;
-        letter-spacing: 0.3px;
-      }
+      background-color: $purple;
+      color: $textLighter;
+    }
+  }
+  p {
+    padding: 0.5rem 1rem;
+    color: $textLighter;
+    span {
+      font-weight: bolder;
+      letter-spacing: 0.3px;
+    }
 
-      a {
-        text-decoration: none;
+    a {
+      text-decoration: none;
+      font-weight: bolder;
+      color: $textLighter;
+      padding: 0.5rem 1rem;
+      transition: 0.3s;
+      // font-size: 1rem;
+      @media (min-width: 1024px) {
         font-size: 2rem;
-        font-weight: bolder;
-        color: rgb(211, 199, 199);
-        padding: 0.5rem 1rem;
-        transition: 0.3s;
-        &:hover {
-          color: rgb(180, 168, 168);
-        }
       }
-    }
-    .copyright {
-      margin-top: 2rem;
-      .year {
-        font-weight: normal;
+      &:hover {
+        color: rgb(180, 168, 168);
       }
     }
   }
-}
 
-@media screen and (max-width: 1024px) {
-  .projects {
-    padding: 0 30px;
-    text-align: center;
+  &__copyright {
+    margin-top: 2rem;
   }
-
-  .project {
-    flex-direction: column;
-    height: max-content;
-  }
-  .project:nth-child(2n) {
-    flex-direction: column;
-  }
-
-  .phone,
-  .laptop {
-    transform: none !important;
-  }
-
-  .githubChart {
-    display: none;
-  }
-
-  .githubTitle {
-    text-align: center;
-    font-size: 10vw;
-  }
-
-  .githubSm {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    color: #555;
-    font-size: 30px;
-    text-align: center;
-  }
-}
-
-@keyframes rotate-right {
-  from {
-    transform: rotate(0);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes rotate-left {
-  from {
-    transform: rotate(0);
-  }
-
-  to {
-    transform: rotate(-360deg);
+  &__copyright-year {
+    font-weight: normal;
   }
 }
