--- a/scss/main.scss
+++ b/scss/main.scss
@@ -235,11 +235,13 @@
     font-size: 1rem;
     line-height: 180%;
     padding: 3rem 0 3rem 0;
+    text-align: justify;
     @media (min-width: 1024px) {
       width: 70%;
       font-size: 1.2rem;
       line-height: 160%;
       padding: 3rem 0 7rem 0;
+      text-align: left;
     }
     span {
       font-size: 1.25rem;
@@ -259,6 +261,7 @@
     @media (min-width: 1024px) {
       margin-left: 3rem;
       justify-content: flex-end;
+      align-items: stretch;
     }
     &__list {
       display: grid;
@@ -314,15 +317,15 @@
   .project {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    // justify-content: center;
     align-items: center;
-    gap: 1vw;
+    // gap: 1vw;
     height: fit-content;
+    // margin-bottom: 8vw;
     @media (min-width: 1024px) {
       flex-direction: row;
-      margin-bottom: 8vw;
       height: 100vh;
-      gap: 7vw;
+      // gap: 7vw;
     }
     &:nth-child(2n) {
       flex-direction: column;
@@ -378,7 +381,7 @@
       text-align: justify;
       line-height: 160%;
       @media (min-width: 1024px) {
-        line-height: 80%;
+        line-height: 150%;
       }
     }
     &__button {
