--- a/css/main.css
+++ b/css/main.css
@@ -386,6 +386,7 @@
   font-size: 1rem;
   line-height: 180%;
   padding: 3rem 0 3rem 0;
+  text-align: justify;
 }
 
 @media (min-width: 1024px) {
@@ -394,6 +395,7 @@
     font-size: 1.2rem;
     line-height: 160%;
     padding: 3rem 0 7rem 0;
+    text-align: left;
   }
 }
 
@@ -428,6 +430,9 @@
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
   }
 }
 
@@ -512,13 +517,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 1vw;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
@@ -530,9 +531,7 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    margin-bottom: 8vw;
     height: 100vh;
-    gap: 7vw;
   }
 }
 
@@ -626,7 +625,7 @@
 
 @media (min-width: 1024px) {
   .projects .project__desc {
-    line-height: 80%;
+    line-height: 150%;
   }
 }
 
