--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,6 @@ html {
 .welcome__text {
   display: block;
   color: #888484;
-  font-size: 50vw;
   cursor: default;
   font-size: 70vw;
 }
@@ -121,8 +120,8 @@ html {
 
 @media (min-width: 768px) {
   .welcome__icon-one {
-    width: 9vw;
-    top: 70%;
+    width: 12vw;
+    top: 76%;
     left: 58%;
   }
 }
@@ -137,15 +136,15 @@ html {
 
 @media (min-width: 768px) {
   .welcome__icon-two {
-    width: 3vw;
+    width: 5vw;
     top: 20%;
-    left: 66%;
+    left: 56%;
   }
 }
 
 @media (min-width: 1024px) {
   .welcome__icon-two {
-    left: 52%;
+    left: 66%;
   }
 }
 
@@ -160,8 +159,8 @@ html {
 
 @media (min-width: 768px) {
   .welcome__icon-three {
-    width: 5vw;
-    top: 65%;
+    width: 6vw;
+    top: 80%;
     left: 18%;
   }
 }
@@ -327,8 +326,14 @@ html {
         grid-template-columns: repeat(2, 1fr);
     -ms-grid-rows: 1fr;
         grid-template-rows: 1fr;
+    padding: 3rem 10px 10px 10px;
+    height: 110vh;
+  }
+}
+
+@media (min-width: 1400px) {
+  .about {
     padding: 6rem 10px 10px 10px;
-    height: 100vh;
   }
 }
 
@@ -354,10 +359,29 @@ html {
   font-size: 1.5rem;
 }
 
+@media (min-width: 1024px) {
+  .about__box h3 {
+    padding-top: 2rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .about__box h3 {
+    padding-top: 4rem;
+  }
+}
+
 .about__img {
   position: relative;
   width: 64vw;
   height: 64vw;
+}
+
+@media (min-width: 576px) {
+  .about__img {
+    width: 32vw;
+    height: 32vw;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -395,11 +419,18 @@ html {
 
 @media (min-width: 1024px) {
   .about__text {
-    width: 70%;
-    font-size: 1.2rem;
+    width: 85%;
+    font-size: 1rem;
     line-height: 160%;
     padding: 3rem 0 7rem 0;
     text-align: left;
+  }
+}
+
+@media (min-width: 1400px) {
+  .about__text {
+    width: 70%;
+    font-size: 1.2rem;
   }
 }
 
@@ -451,6 +482,12 @@ html {
 
 @media (min-width: 1024px) {
   .about .skills__list {
+    font-size: 1rem;
+  }
+}
+
+@media (min-width: 1400px) {
+  .about .skills__list {
     font-size: 1.2rem;
   }
 }
@@ -470,12 +507,24 @@ html {
 }
 
 @media (min-width: 1024px) {
+  .about .skills p:first-child {
+    padding: 3rem 0;
+  }
+}
+
+@media (min-width: 1400px) {
+  .about .skills p:first-child {
+    padding: 3rem 0 6rem 0;
+  }
+}
+
+@media (min-width: 1024px) {
   .about .skills p {
     padding: 3rem 0 7rem 0;
   }
 }
 
-.about .skills__notice {
+.about .skills p:nth-last-child(1) {
   font-size: 0.85rem;
 }
 
@@ -507,6 +556,12 @@ html {
   margin-top: 8rem;
 }
 
+@media (min-width: 768px) {
+  .projects__title {
+    font-size: 7vw;
+  }
+}
+
 @media (min-width: 1024px) {
   .projects__title {
     margin-top: 0;
@@ -524,9 +579,16 @@ html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 1vw;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+}
+
+@media (min-width: 768px) {
+  .projects .project {
+    margin-bottom: 8vw;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -568,10 +630,11 @@ html {
           transform: scale(0.8);
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .projects .project__phone {
     -webkit-transform: scale(1);
             transform: scale(1);
+    margin-bottom: 3rem;
   }
 }
 
@@ -612,12 +675,18 @@ html {
 }
 
 .projects .project__title {
-  font-size: 8vw;
+  font-size: 7vw;
+}
+
+@media (min-width: 576px) {
+  .projects .project__title {
+    font-size: 4vw;
+  }
 }
 
 @media (min-width: 1024px) {
   .projects .project__title {
-    font-size: 4vw;
+    font-size: 3vw;
   }
 }
 
@@ -674,12 +743,14 @@ html {
   cursor: pointer;
   -webkit-transform: scale(0.55);
           transform: scale(0.55);
+  z-index: 10;
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .laptop {
     -webkit-transform: scale(1);
             transform: scale(1);
+    margin-bottom: 3rem;
   }
 }
 
@@ -717,10 +788,16 @@ html {
   height: 60vh;
 }
 
+@media (min-width: 768px) {
+  .github {
+    height: 70vh;
+    margin-top: 0;
+  }
+}
+
 @media (min-width: 1024px) {
   .github {
-    height: 80vh;
-    margin-top: 0;
+    height: 100vh;
   }
 }
 
@@ -731,9 +808,15 @@ html {
   color: #888484;
 }
 
+@media (min-width: 768px) {
+  .github__title {
+    font-size: 6vw;
+    margin-top: 5vw;
+  }
+}
+
 @media (min-width: 1024px) {
   .github__title {
-    margin-top: 2vw;
     font-size: 5vw;
   }
 }
@@ -934,10 +1017,10 @@ html {
 .footer__go-up a {
   font-size: 1.6rem;
   color: #a59c9c;
-  padding: .5rem;
+  padding: 0.5rem;
   cursor: pointer;
-  -webkit-transition: color .3s;
-  transition: color .3s;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
 }
 
 .footer__go-up a:hover {
